--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,26 @@
-.fondo{
-    background-image:url(/assets/img/fondo.jpg);
+.mini{
+    height: 42px;
+    width: 32px;
+}
+
+.login {
+    width: 400px;
+    height: 305px;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+}
+
+.registro {
+    width: 400px;
+    height: 535px;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+}
+
+.body-bg{
+    background-image: url(/assets/img/fondo.jpg);
     background-size: cover;
     background-position: cover;
     background-repeat: no-repeat;
