--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,15 +5,19 @@
 
 .login {
     width: 400px;
-    height: 305px;
+    height: 255px;
     background-color: black;
     color: white;
     border-radius: 10px;
 }
 
+.filtro {
+    background-color: black;
+}
+
 .registro {
     width: 400px;
-    height: 535px;
+    height: 455px;
     background-color: black;
     color: white;
     border-radius: 10px;
@@ -40,4 +44,8 @@
 .mini{
     height: 42px;
     width: 32px;
+}
+
+small {
+    color: red;
 }
