--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,3 +49,19 @@
 small {
     color: red;
 }
+.barra{
+    margin-left: 2rem;
+    align-items: center;
+    justify-content: center;
+}
+.precentacion {
+    margin-top: 1rem;
+    height: 90%;
+    width: 90%;
+    object-fit: cover;
+}
+.tamano2{
+    height: 400px;
+    width: 100vw;
+    object-fit: cover;
+}
