--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,8 @@ small {
     color: red;
 }
 .barra{
-    margin-left: 2rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
     align-items: center;
     justify-content: center;
 }
