--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,28 +41,33 @@
     margin-right: 2.5%;
 }
 
-.mini{
-    height: 42px;
-    width: 32px;
-}
-
 small {
     color: red;
 }
+
 .barra{
     margin-top: 10px;
     margin-bottom: 10px;
     align-items: center;
     justify-content: center;
 }
-.precentacion {
+
+.presentacion {
     margin-top: 1rem;
     height: 90%;
     width: 90%;
     object-fit: cover;
 }
+
+/* Carrusel Autos */
 .tamano2{
     height: 400px;
     width: 100vw;
     object-fit: cover;
+}
+
+/* Prodcutos */
+.card-img-top {
+    height: 150px; /* Establece una altura fija */
+    object-fit: cover; /* Ajusta la imagen para cubrir el contenedor sin distorsionar */
 }
