--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,8 +66,8 @@ small {
     object-fit: cover;
 }
 
-/* Prodcutos */
+/* Imágenes de los productos*/
 .card-img-top {
-    height: 150px; /* Establece una altura fija */
-    object-fit: cover; /* Ajusta la imagen para cubrir el contenedor sin distorsionar */
+    height: 150px;
+    object-fit: cover;
 }
